# PK_SO_Projekt_Jaskinia

./: .gitignore  CMakeLists.txt
include/: config.h  logger.c  logger.h  shared.h
src/: cashier.c  guard.c  guide.c  main.c  utils.c  utils.h  visitor.c
